# uniroam-defanged

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DEFENSE_GUIDE.md  TALK_REFERENCES.md
simulator/: __init__.py  __main__.py  display.py  robot_simulator.py  run.py  virtual_ble.py
uniroam/: __init__.py  config.py  exploit_stub.py  hunt_state_machine.py  opsec_utils.py  payload_builder.py  persistence.py  propagation_engine.py  test_worm.py
