[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uniroam-defanged"
version = "1.0.0"
description = "Educational robot worm framework (defanged) - WISCON 2026"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.10"
authors = [
    { name = "Alexander Bissell" },
]
keywords = [
    "security-research", "worm", "robotics", "unitree", "iot",
    "c2", "botnet", "education", "defanged",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/a-bissell/uniroam-defanged"
Issues = "https://github.com/a-bissell/uniroam-defanged/issues"

[tool.setuptools.packages.find]
include = ["uniroam*", "simulator*"]
